--- a/assignments/assignment3/assignment3-solution/result.html
+++ b/assignments/assignment3/assignment3-solution/result.html
@@ -1,5 +1,6 @@
 <div style="display: inline-block">
 <ul>
+	<h3>{{ctrl.myTitle}} {{ctrl.foundItems.length}}</h3>
 	<li ng-repeat="item in ctrl.foundItems">
 		<h4>{{item.name}}</h4>
 		<h6>{{item.description}}</h6>
