--- a/assignments/assignment3/assignment3-solution/index.html
+++ b/assignments/assignment3/assignment3-solution/index.html
@@ -19,7 +19,7 @@
       <button ng-click="ctrl.narrowIt()" class="btn btn-primary">Narrow It Down For Me!</button>
     </div>
     <!-- found-items should be implemented as a component -->
-    <found-items title="Founded items" found-items="ctrl.foundItems" on-remove="ctrl.removeItem(index)" ng-if="ctrl.foundItems"></found-items>
+    <found-items title="{{ctrl.title}}" found-items="ctrl.foundItems" on-remove="ctrl.removeItem(index)"></found-items>
   </div>
 
 </body>
