--- a/assignments/assignment3/assignment3-solution/result.html
+++ b/assignments/assignment3/assignment3-solution/result.html
@@ -1,6 +1,6 @@
 <div style="display: inline-block">
 <ul>
-	<h3>{{ctrl.myTitle}} {{ctrl.foundItems.length}}</h3>
+	<h3>{{ctrl.myTitle}}</h3>
 	<li ng-repeat="item in ctrl.foundItems">
 		<h4>{{item.name}}</h4>
 		<h6>{{item.description}}</h6>
@@ -8,4 +8,5 @@
 		<button type="button" class="btn btn-warning" ng-click="ctrl.onRemove({index: $index})">Don't want this one!</button>
 	</li>
 </ul>
+<div class="error" ng-if="ctrl.foundItems.length === 0">Nothing found</div>
 </div>
